openshift/base/vllm-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: vllm-networkpolicy
  namespace: vllm
spec:
  podSelector:
    matchLabels:
      serving.kserve.io/inferenceservice: llm-ov
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: vllm-optimizer-dev
      podSelector:
        matchLabels:
          app: vllm-optimizer-backend
    - namespaceSelector:
        matchLabels:
          name: openshift-monitoring
  ports:
  - protocol: TCP
    port: 8000
  - protocol: TCP
    port: 8080
